# api/models/repository_transaction.go
@@ -11,7 +11,6 @@ type RepositoryTransaction struct {
 	Quantity 				  int        `json:"quantity"`
 	CreatedAt				  time.Time  `json:"created_at"`
 	UpdatedAt				  time.Time  `json:"updated_at"`
-	DeletedAt				  *time.Time `json:"deleted_at"`
 }
 
 type CreateRepositoryTransaction struct {
